Update paper, incorporate feedback from co-authors

--- a/paper/AB-tDCS.bib
+++ b/paper/AB-tDCS.bib
@@ -159,7 +159,8 @@ author = {Esterman, Michael and Thai, Michelle and Okabe, Hidefusa and DeGutis, 
 doi = {10.1016/j.neuroimage.2017.05.011},
 eprint = {15334406},
 file = {:Users/lcreteig/Documents/Mendeley Desktop/Esterman et al.{\_}2017{\_}NeuroImage.pdf:pdf},
-isbn = {1095-9572 (Electronic)1053-8119 (Linking)},
+isbn = {1095-9572 (Electronic)
+1053-8119 (Linking)},
 issn = {10959572},
 journal = {NeuroImage},
 number = {May},
@@ -443,7 +444,8 @@ abstract = {Transcranial direct current stimulation (tDCS) causes a complex spat
 author = {Opitz, Alexander and Paulus, Walter and Will, Susanne and Antunes, Andre and Thielscher, Axel},
 doi = {10.1016/j.neuroimage.2015.01.033},
 file = {:Users/lcreteig/Documents/Mendeley Desktop/Opitz et al.{\_}2015{\_}NeuroImage.pdf:pdf},
-isbn = {1095-9572 (Electronic)1053-8119 (Linking)},
+isbn = {1095-9572 (Electronic)
+1053-8119 (Linking)},
 issn = {10959572},
 journal = {NeuroImage},
 pages = {140--150},
@@ -468,15 +470,15 @@ url = {http://linkinghub.elsevier.com/retrieve/pii/S0896627315006741},
 volume = {87},
 year = {2015}
 }
-@article{Pernet2018,
-abstract = {The Brain Imaging Data Structure (BIDS) project is a quickly evolving effort among the human brain imaging research community to create standards allowing researchers to readily organize and share study data within and between laboratories. The first BIDS standard was proposed for the MRI/fMRI research community and has now been widely adopted. More recently a magnetoencephalography (MEG) data extension, BIDS-MEG, has been published. Here we present an extension to BIDS for electroencephalography (EEG) data, BIDS-EEG, along with tools and references to a series of public EEG datasets organized using this new standard.},
-author = {Pernet, Cyril R and Appelhoff, Stefan and Flandin, Guillaume and Phillips, Christophe and Delorme, Arnaud and Oostenveld, Robert},
-doi = {10.31234/osf.io/63a4y},
-file = {:Users/lcreteig/Documents/Mendeley Desktop/Pernet et al.{\_}2018{\_}PsyArXiv.pdf:pdf},
-journal = {PsyArXiv},
-keywords = {archive,bids,bids-eeg,brain imaging data structure,datasets,eeg,electroencephalography,formatting,standardization},
-title = {{BIDS-EEG: an extension to the Brain Imaging Data Structure (BIDS) Specification for electroencephalography}},
-year = {2018}
+@article{Pernet2019,
+abstract = {The Brain Imaging Data Structure (BIDS) project is a rapidly evolving effort in the human brain imaging research community to create standards allowing researchers to readily organize and share study data within and between laboratories. Here we present an extension to BIDS for electroencephalography (EEG) data, EEG-BIDS, along with tools and references to a series of public EEG datasets organized using this new standard.},
+author = {Pernet, Cyril R and Appelhoff, Stefan and Gorgolewski, Krzysztof J and Flandin, Guillaume and Phillips, Christophe and Delorme, Arnaud and Oostenveld, Robert},
+doi = {10.1038/s41597-019-0104-8},
+journal = {Scientific Data},
+title = {{EEG-BIDS, an extension to the brain imaging data structure for electroencephalography}},
+volume = {6},
+pages = {103},
+year = {2019}
 }
 @article{Raymond1992,
 author = {Raymond, Jane E. and Shapiro, Kimron L. and Arnell, Karen M.},
@@ -1280,7 +1282,7 @@ volume = {75},
 year = {2013}
 }
 @article{DeGraaf2018,
-author = {{de Graaf}, Tom A. and Sack, Alexander T.},
+author = {de Graaf, Tom A. and Sack, Alexander T.},
 doi = {10.3389/fnins.2018.00915},
 file = {:Users/lcreteig/Documents/Mendeley Desktop/de Graaf, Sack{\_}2018{\_}Frontiers in Neuroscience.pdf:pdf},
 issn = {1662-453X},
