--- a/paper/AB-tDCS_updated.bib
+++ b/paper/AB-tDCS_updated.bib
@@ -1,5 +1,5 @@
 
-@article{amrheinInferentialStatisticsDescriptive2019,
+@article{Amrhein2019,
 	title = {Inferential {Statistics} as {Descriptive} {Statistics}: {There} {Is} {No} {Replication} {Crisis} if {We} {Don}’t {Expect} {Replication}},
 	volume = {73},
 	issn = {0003-1305},
@@ -16,7 +16,8 @@
 	note = {Publisher: Taylor \& Francis
 \_eprint: https://doi.org/10.1080/00031305.2018.1543137},
 	keywords = {Auxiliary hypotheses, Confidence interval, Hypothesis test, P-value, Posterior probability, Replication, Selective reporting, Significance test, Statistical model, Unreplicable research},
-	pages = {262--270}
+	pages = {262--270},
+	file = {amrhein_2019_inferential_statistics_as_descriptive_statistics_-_there_is_no_replication.pdf:/Users/leonreteig/surfdrive/zotero-library/Amrhein/amrhein_2019_inferential_statistics_as_descriptive_statistics_-_there_is_no_replication.pdf:application/pdf}
 }
 
 @article{piperExactReplicationFoundation2019,
@@ -36,10 +37,11 @@
 	year = {2019},
 	note = {Publisher: Public Library of Science},
 	keywords = {Forecasting, Animal studies, Drug therapy, Head, Metaanalysis, Neuroprotectives, Replication studies, Scientists},
-	pages = {e3000188}
+	pages = {e3000188},
+	file = {piper_2019_exact_replication_-_foundation_of_science_or_game_of_chance.pdf:/Users/leonreteig/surfdrive/zotero-library/Piper/piper_2019_exact_replication_-_foundation_of_science_or_game_of_chance.pdf:application/pdf}
 }
 
-@article{hedgesMoreOneReplication2019,
+@article{Hedges2019,
 	title = {More {Than} {One} {Replication} {Study} {Is} {Needed} for {Unambiguous} {Tests} of {Replication}},
 	volume = {44},
 	issn = {1076-9986},
@@ -55,13 +57,15 @@
 	year = {2019},
 	note = {Publisher: American Educational Research Association},
 	keywords = {educational policy, evaluation, experimental design, meta-analysis, program evaluation, research methodology, validity/reliability},
-	pages = {543--570}
+	pages = {543--570},
+	file = {hedges_schauer_2019_more_than_one_replication_study_is_needed_for_unambiguous_tests_of_replication.pdf:/Users/leonreteig/surfdrive/zotero-library/Hedges_Schauer/hedges_schauer_2019_more_than_one_replication_study_is_needed_for_unambiguous_tests_of_replication.pdf:application/pdf}
 }
 
 @misc{EvaluatingEffectSize,
 	title = {Evaluating {Effect} {Size} in {Psychological} {Research}: {Sense} and {Nonsense} - {David} {C}. {Funder}, {Daniel} {J}. {Ozer}, 2019},
 	url = {https://journals.sagepub.com/doi/10.1177/2515245919847202},
-	urldate = {2021-01-26}
+	urldate = {2021-01-26},
+	file = {evaluating_effect_size_in_psychological_research_-_sense_and_nonsense_-_david_c..pdf:/Users/leonreteig/surfdrive/zotero-library/undefined/evaluating_effect_size_in_psychological_research_-_sense_and_nonsense_-_david_c..pdf:application/pdf}
 }
 
 @article{harmsBayesFactorReplications2019,
@@ -80,10 +84,11 @@
 	note = {Publisher: Taylor \& Francis
 \_eprint: https://doi.org/10.1080/00031305.2018.1518787},
 	keywords = {ANOVA designs, Bayes factor, Replications},
-	pages = {327--339}
+	pages = {327--339},
+	file = {harms_2019_a_bayes_factor_for_replications_of_anova_results.pdf:/Users/leonreteig/surfdrive/zotero-library/Harms/harms_2019_a_bayes_factor_for_replications_of_anova_results.pdf:application/pdf}
 }
 
-@techreport{muradchanianHowBestQuantify2020,
+@techreport{Muradchanian2020,
 	title = {How {Best} to {Quantify} {Replication} {Success}? {A} {Simulation} {Study} on the {Comparison} of {Replication} {Success} {Metrics}},
 	shorttitle = {How {Best} to {Quantify} {Replication} {Success}?},
 	url = {https://osf.io/preprints/metaarxiv/wvdjf/},
@@ -95,23 +100,25 @@
 	year = {2020},
 	doi = {10.31222/osf.io/wvdjf},
 	note = {type: article},
-	keywords = {Economics, Other Social and Behavioral Sciences, Psychology, publication bias, replication success, Social and Behavioral Sciences}
+	keywords = {Economics, Other Social and Behavioral Sciences, Psychology, publication bias, replication success, Social and Behavioral Sciences},
+	file = {muradchanian_2020_how_best_to_quantify_replication_success_-_a_simulation_study_on_the_comparison.pdf:/Users/leonreteig/surfdrive/zotero-library/Muradchanian/muradchanian_2020_how_best_to_quantify_replication_success_-_a_simulation_study_on_the_comparison.pdf:application/pdf}
 }
 
-@incollection{zondervan-zwijnenburgTestingReplicationSmall2020,
+@incollection{Zondervan-Zwijnenburg2020,
 	address = {Abingdon, Oxon ; New York, NY},
 	title = {Testing {Replication} with {Small} {Samples}},
 	isbn = {978-0-429-27387-2},
 	language = {en},
 	booktitle = {Small sample size solutions: a guide for applied researchers and practitioners},
-	publisher = {Routledge, an imprint of the Taylor \& Francis Group, an informa business},
-	author = {Zondervan-Zwijnenburg, Mariëlle and RIjshouwer, Dominique},
+	publisher = {Routledge},
+	author = {Zondervan-Zwijnenburg, Mariëlle and Rijshouwer, Dominique},
+	editor = {van de Schoot, Rens and Miočević, Milica},
 	year = {2020},
 	keywords = {Data sets, Methodology, Research},
 	file = {zondervan-zwijnenburg_rijshouwer_2020_testing_replication_with_small_samples.pdf:/Users/leonreteig/Zotero/storage/NQTJWTIK/zondervan-zwijnenburg_rijshouwer_2020_testing_replication_with_small_samples.pdf:application/pdf}
 }
 
-@article{lebelBriefGuideEvaluate2019,
+@article{LeBel2019,
 	title = {A {Brief} {Guide} to {Evaluate} {Replications}},
 	volume = {3},
 	copyright = {Copyright (c) 2019 Etienne Philippe LeBel, Wolf Vanpaemel, Irene Cheung, Lorne Campbell},
@@ -124,7 +131,8 @@
 	author = {LeBel, Etienne Philippe and Vanpaemel, Wolf and Cheung, Irene and Campbell, Lorne},
 	month = jun,
 	year = {2019},
-	keywords = {transparency, reproducibility, direct replication, replicability, evaluating replications}
+	keywords = {transparency, reproducibility, direct replication, replicability, evaluating replications},
+	file = {lebel_2019_a_brief_guide_to_evaluate_replications.pdf:/Users/leonreteig/surfdrive/zotero-library/LeBel/lebel_2019_a_brief_guide_to_evaluate_replications.pdf:application/pdf}
 }
 
 @article{heldNewStandardAnalysis2020,
@@ -143,18 +151,18 @@
 	year = {2020},
 	note = {\_eprint: https://rss.onlinelibrary.wiley.com/doi/pdf/10.1111/rssa.12493},
 	keywords = {Power, Prior–data conflict, Replication success, Reverse Bayes technique, Sample size, Sceptical p-value},
-	pages = {431--448}
+	pages = {431--448},
+	file = {held_2020_a_new_standard_for_the_analysis_and_design_of_replication_studies.pdf:/Users/leonreteig/surfdrive/zotero-library/Held/held_2020_a_new_standard_for_the_analysis_and_design_of_replication_studies.pdf:application/pdf}
 }
 
-@techreport{lindeDecisionsEquivalenceComparison2020,
-	type = {preprint},
+@article{Linde2020,
 	title = {Decisions {About} {Equivalence}: {A} {Comparison} of {TOST}, {HDI}-{ROPE}, and the {Bayes} {Factor}},
 	shorttitle = {Decisions {About} {Equivalence}},
 	url = {https://osf.io/bh8vu},
 	abstract = {Some important research questions require the ability to ﬁnd evidence for two conditions being practically equivalent. This is impossible to accomplish within the traditional frequentist null hypothesis signiﬁcance testing framework; hence, other methodologies must be utilized. We explain and illustrate three approaches for ﬁnding evidence for equivalence: The frequentist two one-sided tests procedure, the Bayesian highest density interval region of practical equivalence procedure, and the Bayes factor interval null procedure. We compare the classiﬁcation performances of these three approaches for various plausible scenarios. The results indicate that the Bayes factor interval null approach compares favorably to the other two approaches in terms of statistical power. Critically, compared to the Bayes factor interval null procedure, the two one-sided tests and the highest density interval region of practical equivalence procedures have limited discrimination capabilities when the sample size is relatively small: speciﬁcally, in order to be practically useful, these two methods generally require over 250 cases within each condition when rather large equivalence margins of approximately 0.2 or 0.3 are used; for smaller equivalence margins even more cases are required. Because of these results, we recommend that researchers rely more on the Bayes factor interval null approach for quantifying evidence for equivalence, especially for studies that are constrained on sample size.},
 	language = {en},
 	urldate = {2021-01-26},
-	institution = {PsyArXiv},
+	journal = {PsyArXiv},
 	author = {Linde, Maximilian and Tendeiro, Jorge and Selker, Ravi and Wagenmakers, Eric-Jan and van Ravenzwaaij, Don},
 	month = nov,
 	year = {2020},
@@ -162,7 +170,7 @@
 	file = {linde_2020_decisions_about_equivalence_-_a_comparison_of_tost,_hdi-rope,_and_the_bayes.pdf:/Users/leonreteig/Zotero/storage/CE49K9IK/linde_2020_decisions_about_equivalence_-_a_comparison_of_tost,_hdi-rope,_and_the_bayes.pdf:application/pdf}
 }
 
-@article{lakensImprovingInferencesNull2020,
+@article{Lakens2020,
 	title = {Improving {Inferences} {About} {Null} {Effects} {With} {Bayes} {Factors} and {Equivalence} {Tests}},
 	volume = {75},
 	issn = {1079-5014},
@@ -175,7 +183,8 @@
 	author = {Lakens, Daniël and McLatchie, Neil and Isager, Peder M and Scheel, Anne M and Dienes, Zoltan},
 	month = jan,
 	year = {2020},
-	pages = {45--57}
+	pages = {45--57},
+	file = {lakens_2020_improving_inferences_about_null_effects_with_bayes_factors_and_equivalence_tests.pdf:/Users/leonreteig/surfdrive/zotero-library/Lakens/lakens_2020_improving_inferences_about_null_effects_with_bayes_factors_and_equivalence_tests.pdf:application/pdf}
 }
 
 @techreport{leplaaBayesianEvaluationReplication2020,
@@ -189,7 +198,8 @@
 	year = {2020},
 	doi = {10.31234/osf.io/49tbz},
 	note = {type: article},
-	keywords = {Meta-science}
+	keywords = {Meta-science},
+	file = {leplaa_2020_bayesian_evaluation_of_replication_studies.pdf:/Users/leonreteig/surfdrive/zotero-library/Leplaa/leplaa_2020_bayesian_evaluation_of_replication_studies.pdf:application/pdf}
 }
 
 @article{schauerReconsideringStatisticalMethods2020,
@@ -220,4 +230,165 @@
 	year = {2021},
 	pages = {756--768},
 	file = {Full Text PDF:/Users/leonreteig/Zotero/storage/HSVLJK4L/London and Slagter - 2021 - No Effect of Transcranial Direct Current Stimulati.pdf:application/pdf;Snapshot:/Users/leonreteig/Zotero/storage/9DSEPPCR/No-Effect-of-Transcranial-Direct-Current.html:text/html}
+}
+
+@article{Sdoia2019,
+	title = {Access to consciousness of briefly presented visual events is modulated by transcranial direct current stimulation of left dorsolateral prefrontal cortex},
+	volume = {9},
+	copyright = {2019 The Author(s)},
+	issn = {2045-2322},
+	url = {https://www.nature.com/articles/s41598-019-47527-4},
+	doi = {10.1038/s41598-019-47527-4},
+	abstract = {Adaptive behaviour requires the ability to process goal-relevant events at the expense of irrelevant ones. However, perception of a relevant visual event can transiently preclude access to consciousness of subsequent events — a phenomenon called attentional blink (AB). Here we investigated involvement of the left dorsolateral prefrontal cortex (DLPFC) in conscious access, by using transcranial direct current stimulation (tDCS) to potentiate or reduce neural excitability in the context of an AB task. In a sham-controlled experimental design, we applied between groups anodal or cathodal tDCS over the left DLPFC, and examined whether this stimulation modulated the proportion of stimuli that were consciously reported during the AB period. We found that tDCS over the left DLPFC affected the proportion of consciously perceived target stimuli. Moreover, anodal and cathodal tDCS had opposing effects, and exhibited different temporal patterns. Anodal stimulation attenuated the AB, enhancing conscious report earlier in the AB period. Cathodal stimulation accentuated the AB, reducing conscious report later in the AB period. These findings support the notion that the DLPFC plays a role in facilitating information transition from the unconscious to the conscious stage of processing.},
+	language = {en},
+	number = {1},
+	urldate = {2021-05-13},
+	journal = {Scientific Reports},
+	author = {Sdoia, Stefano and Conversi, David and Pecchinenda, Anna and Ferlazzo, Fabio},
+	month = jul,
+	year = {2019},
+	note = {Number: 1
+Publisher: Nature Publishing Group},
+	pages = {10950},
+	file = {Sdoia et al_2019_Access to consciousness of briefly presented visual events is modulated by.pdf:/Users/leonreteig/Zotero/storage/VU3WY3R4/Sdoia et al_2019_Access to consciousness of briefly presented visual events is modulated by.pdf:application/pdf;Snapshot:/Users/leonreteig/Zotero/storage/2BS8GZRZ/s41598-019-47527-4.html:text/html}
+}
+
+@article{Brandt2014,
+	title = {The {Replication} {Recipe}: {What} makes for a convincing replication?},
+	volume = {50},
+	issn = {0022-1031},
+	shorttitle = {The {Replication} {Recipe}},
+	url = {https://www.sciencedirect.com/science/article/pii/S0022103113001819},
+	doi = {10.1016/j.jesp.2013.10.005},
+	abstract = {Psychological scientists have recently started to reconsider the importance of close replications in building a cumulative knowledge base; however, there is no consensus about what constitutes a convincing close replication study. To facilitate convincing close replication attempts we have developed a Replication Recipe, outlining standard criteria for a convincing close replication. Our Replication Recipe can be used by researchers, teachers, and students to conduct meaningful replication studies and integrate replications into their scholarly habits.},
+	language = {en},
+	urldate = {2021-05-13},
+	journal = {Journal of Experimental Social Psychology},
+	author = {Brandt, Mark J. and IJzerman, Hans and Dijksterhuis, Ap and Farach, Frank J. and Geller, Jason and Giner-Sorolla, Roger and Grange, James A. and Perugini, Marco and Spies, Jeffrey R. and van 't Veer, Anna},
+	month = jan,
+	year = {2014},
+	keywords = {Pre-registration, Replication, Research method, Solid Science, Statistical power},
+	pages = {217--224},
+	file = {Brandt et al_2014_The Replication Recipe.pdf:/Users/leonreteig/Zotero/storage/5QP2CPBK/Brandt et al_2014_The Replication Recipe.pdf:application/pdf;ScienceDirect Snapshot:/Users/leonreteig/Zotero/storage/PAYRNTNM/S0022103113001819.html:text/html}
+}
+
+@article{Anderson2016,
+	title = {There’s more than one way to conduct a replication study: {Beyond} statistical significance.},
+	volume = {21},
+	issn = {1939-1463, 1082-989X},
+	shorttitle = {There’s more than one way to conduct a replication study},
+	url = {http://doi.apa.org/getdoi.cfm?doi=10.1037/met0000051},
+	doi = {10.1037/met0000051},
+	abstract = {As the field of psychology struggles to trust published findings, replication research has begun to become more of a priority to both scientists and journals. With this increasing emphasis placed on reproducibility, it is essential that replication studies be capable of advancing the field. However, we argue that many researchers have been only narrowly interpreting the meaning of replication, with studies being designed with a simple statistically significant or nonsignificant results framework in mind. Although this interpretation may be desirable in some cases, we develop a variety of additional “replication goals” that researchers could consider when planning studies. Even if researchers are aware of these goals, we show that they are rarely used in practice—as results are typically analyzed in a manner only appropriate to a simple significance test. We discuss each goal conceptually, explain appropriate analysis procedures, and provide 1 or more examples to illustrate these analyses in practice. We hope that these various goals will allow researchers to develop a more nuanced understanding of replication that can be flexible enough to answer the various questions that researchers might seek to understand.},
+	language = {en},
+	number = {1},
+	urldate = {2021-05-13},
+	journal = {Psychological Methods},
+	author = {Anderson, Samantha F. and Maxwell, Scott E.},
+	year = {2016},
+	pages = {1--12},
+	file = {Anderson and Maxwell - 2016 - There’s more than one way to conduct a replication.pdf:/Users/leonreteig/Zotero/storage/BF95RT4U/Anderson and Maxwell - 2016 - There’s more than one way to conduct a replication.pdf:application/pdf}
+}
+
+@article{Reteig2017,
+	title = {Transcranial {Electrical} {Stimulation} as a {Tool} to {Enhance} {Attention}},
+	volume = {1},
+	issn = {2509-3304},
+	url = {https://doi.org/10.1007/s41465-017-0010-y},
+	doi = {10.1007/s41465-017-0010-y},
+	abstract = {Attention is a fundamental cognitive process—without it, we would be helplessly adrift in an overload of sensory input. There is considerable interest in techniques that can be used to enhance attention, including transcranial electrical stimulation (tES). We present an overview of 52 studies that have paired attention tasks with tES, mostly in the form of transcranial direct current stimulation (tDCS). In particular, we discuss four aspects of attention that have been most extensively targeted to date: visual search, spatial orienting (e.g., Posner cueing tasks), spatial bias (e.g., line bisection tasks), and sustained attention. Some promising results have been reported in each of these domains. However, drawing general conclusions about the efficacy of tES is at present hampered by a large diversity in study design and inconsistent findings. We highlight some pitfalls and opportunities and suggest how these may be addressed in future research aiming to use tES as a tool to enhance or test theoretical hypotheses about attention.},
+	language = {en},
+	number = {1},
+	urldate = {2021-05-13},
+	journal = {Journal of Cognitive Enhancement},
+	author = {Reteig, L. C. and Talsma, L. J. and van Schouwenburg, M. R. and Slagter, H. A.},
+	month = mar,
+	year = {2017},
+	pages = {10--25},
+	file = {Reteig et al_2017_Transcranial Electrical Stimulation as a Tool to Enhance Attention.pdf:/Users/leonreteig/Zotero/storage/FPWZFJJ8/Reteig et al_2017_Transcranial Electrical Stimulation as a Tool to Enhance Attention.pdf:application/pdf}
+}
+
+@article{deBoer2021,
+	title = {The effect of non-invasive brain stimulation on executive functioning in healthy controls: {A} systematic review and meta-analysis},
+	volume = {125},
+	issn = {0149-7634},
+	shorttitle = {The effect of non-invasive brain stimulation on executive functioning in healthy controls},
+	url = {https://www.sciencedirect.com/science/article/pii/S0149763421000282},
+	doi = {10.1016/j.neubiorev.2021.01.013},
+	abstract = {In recent years, there has been a heightened interest in the effect of non-invasive brain stimulation on executive functioning. However, there is no comprehensive overview of its effects on different executive functioning domains in healthy individuals. Here, we assessed the state of the field by conducting a systematic review and meta-analysis on the effectiveness of non-invasive brain stimulation (i.e. repetitive transcranial magnetic stimulation and transcranial direct current stimulation) over prefrontal regions on tasks assessing working memory, inhibition, flexibility, planning and initiation performance. Our search yielded 63 studies (n = 1537), and the effectiveness of excitatory and inhibitory non-invasive brain stimulation were assessed per executive functioning task. Our analyses showed that excitatory non-invasive brain stimulation had a small but positive effect on Stop Signal Task and Go/No-Go Task performance, and that inhibitory stimulation had a small negative effect on Flanker Task performance. Non-invasive brain stimulation did not affect performance on working memory and flexibility tasks, and effects on planning tasks were inconclusive.},
+	language = {en},
+	urldate = {2021-05-13},
+	journal = {Neuroscience \& Biobehavioral Reviews},
+	author = {de Boer, Nina S. and Schluter, Renée S. and Daams, Joost G. and van der Werf, Ysbrand D. and Goudriaan, Anna E. and van Holst, Ruth J.},
+	month = jun,
+	year = {2021},
+	keywords = {Executive functioning, Flexibility, Healthy individuals, Inhibition, Initiation, Meta-analysis, Non-invasive brain stimulation, Planning, Transcranial electrical current stimulation, Transcranial magnetic stimulation, Working memory},
+	pages = {122--147},
+	file = {ScienceDirect Snapshot:/Users/leonreteig/Zotero/storage/XAJK6ZDW/S0149763421000282.html:text/html}
+}
+
+@article{Filmer2020,
+	title = {Modulating brain activity and behaviour with {tDCS}: {Rumours} of its death have been greatly exaggerated},
+	volume = {123},
+	issn = {0010-9452},
+	shorttitle = {Modulating brain activity and behaviour with {tDCS}},
+	url = {https://www.sciencedirect.com/science/article/pii/S0010945219303570},
+	doi = {10.1016/j.cortex.2019.10.006},
+	abstract = {Transcranial electrical brain stimulation (tES) techniques have shown substantial promise in research and applied settings. However, over the last few years the technique has courted significant controversy, resulting in scepticism regarding its reported beneficial effects and future potential. In this opinion article, we examine the key points of criticism raised to date, including whether tES has any meaningful effect on the cortex, issues of replicability, and the variability in its efficacy across individuals. For each point, we assess the strength of the evidence for and against the argument and, where relevant, suggest how the field can improve. We conclude that while some of the highlighted shortcomings of research using electrical brain stimulation are justified, on balance the arguments against using such techniques in cognitive neuroscience are often overstated and elevate the risk of the field “throwing the baby out with the bath water”.},
+	language = {en},
+	urldate = {2021-05-13},
+	journal = {Cortex},
+	author = {Filmer, Hannah L. and Mattingley, Jason B. and Dux, Paul E.},
+	month = feb,
+	year = {2020},
+	keywords = {Brain stimulation, Transcranial direct current stimulation, Transcranial electrical stimulation},
+	pages = {141--151},
+	file = {ScienceDirect Snapshot:/Users/leonreteig/Zotero/storage/6W8RDTDB/S0010945219303570.html:text/html}
+}
+
+@article{Morey2016,
+	title = {Why most of psychology is statistically unfalsifiable},
+	url = {https://zenodo.org/record/838685},
+	doi = {10.5281/zenodo.838685},
+	urldate = {2021-05-13},
+	author = {Morey, Richard and Lakens, Daniël},
+	month = oct,
+	year = {2016}
+}
+
+@article{Filmer2019b,
+	title = {The efficacy of transcranial direct current stimulation to prefrontal areas is related to underlying cortical morphology},
+	volume = {196},
+	issn = {1095-9572},
+	doi = {10.1016/j.neuroimage.2019.04.026},
+	abstract = {Applying a weak electrical current to the cortex can have effects on a range of behaviours. Techniques such as transcranial direct current stimulation (tDCS) have been widely used in both research and clinical settings. However, there is significant variability across individuals in terms of their responsiveness to stimulation, which poses practical challenges to the application of tDCS, but also provides a unique opportunity to study the link between the brain and behaviour. Here, we assessed the role of individual differences in cortical morphology - specifically in prefrontal cortical regions of interest - for determining the influence of tDCS on decision-making performance. Specifically, we employed magnetic resonance imaging (MRI) and a previously replicated paradigm in which we modulated learning in a simple decision-making task by applying tDCS to the left prefrontal cortex in human subjects of both sexes. Cortical thickness of the left (but not right) prefrontal cortex accounted for almost 35\% of the variance in stimulation efficacy across subjects. This is the first demonstration that variations in cortical architecture are associated with reliable differences in the effects of tDCS on cognition. Our findings have important implications for predicting the likely efficacy of different non-invasive brain stimulation treatments on a case by case basis.},
+	language = {eng},
+	journal = {NeuroImage},
+	author = {Filmer, Hannah L. and Ehrhardt, Shane E. and Shaw, Thomas B. and Mattingley, Jason B. and Dux, Paul E.},
+	month = aug,
+	year = {2019},
+	pmid = {30978491},
+	keywords = {Adult, Brain stimulation, Cortical morphology, Decision Making, Female, Humans, Individual differences, Magnetic Resonance Imaging, Male, Models, Neurological, Prefrontal cortex, Prefrontal Cortex, tDCS, Transcranial Direct Current Stimulation, Young Adult},
+	pages = {41--48}
+}
+
+@article{Horne2021,
+	title = {Evidence against benefits from cognitive training and transcranial direct current stimulation in healthy older adults},
+	volume = {5},
+	copyright = {2020 The Author(s), under exclusive licence to Springer Nature Limited},
+	issn = {2397-3374},
+	url = {https://www.nature.com/articles/s41562-020-00979-5},
+	doi = {10.1038/s41562-020-00979-5},
+	abstract = {Cognitive training and brain stimulation show promise for ameliorating age-related neurocognitive decline. However, evidence for this is controversial. In a Registered Report, we investigated the effects of these interventions, where 133 older adults were allocated to four groups (left prefrontal cortex anodal transcranial direct current stimulation (tDCS) with decision-making training, and three control groups) and trained over 5 days. They completed a task/questionnaire battery pre- and post-training, and at 1- and 3-month follow-ups. COMT and BDNF Val/Met polymorphisms were also assessed. Contrary to work in younger adults, there was evidence against tDCS-induced training enhancement on the decision-making task. Moreover, there was evidence against transfer of training gains to untrained tasks or everyday function measures at any post-intervention time points. As indicated by exploratory work, individual differences may have influenced outcomes. But, overall, the current decision-making training and tDCS protocol appears unlikely to lead to benefits for older adults.},
+	language = {en},
+	number = {1},
+	urldate = {2021-05-13},
+	journal = {Nature Human Behaviour},
+	author = {Horne, Kristina S. and Filmer, Hannah L. and Nott, Zoie E. and Hawi, Ziarih and Pugsley, Kealan and Mattingley, Jason B. and Dux, Paul E.},
+	month = jan,
+	year = {2021},
+	note = {Number: 1
+Publisher: Nature Publishing Group},
+	pages = {146--158},
+	file = {Snapshot:/Users/leonreteig/Zotero/storage/7ZGEGNM3/s41562-020-00979-5.html:text/html}
 }
